# inventurgui

./: .gitignore  IU_Inventur.ods  README.md  __init__.py  cli.py  config.yml  hilfe-vorlage.md  inventurgui-cli  main.py  pyproject.toml  requirements.txt
config/: config.py  data.py  users.py
files/: IU_Inventur.ods  config.example.yml  config.yml  help.md  users.yml
functions/: admin.py  cli.py  config.py  data.py  grid.py  main_ui.py  settings.py  users.py  yaml.py
ui/: admin.py  auth.py  grid.py  settings.py
